@@ -4,6 +4,21 @@
    i18n_domain="cmf"
    >
 
+  <genericsetup:importStep
+      name="difftool"
+      handler="Products.CMFDiffTool.exportimport.difftool.importDiffTool"
+      title="Diff Tool"
+      description="Import CMFDiffTool settings">
+    <depends name="toolset" />
+    <depends name="componentregistry" />
+  </genericsetup:importStep>
+
+  <genericsetup:exportStep
+      name="difftool"
+      handler="Products.CMFDiffTool.exportimport.difftool.exportDiffTool"
+      title="Diff Tool"
+      description="Export CMFDiffTool settings"/>
+
   <adapter
      factory=".difftool.DiffToolXMLAdapter"
      provides="Products.GenericSetup.interfaces.IBody"
