@@ -1,10 +1,0 @@
-<?xml version="1.0"?>
-<import-steps>
-  <import-step id="difftool" version="20070304-01"
-               handler="Products.CMFDiffTool.exportimport.difftool.importDiffTool"
-               title="Diff Tool">
-   <dependency step="toolset"/>
-   <dependency step="componentregistry"/>
-     Import CMFDiffTool settings
-  </import-step>
-</import-steps>
