@@ -4,6 +4,8 @@ Changelog
 1.0 - UNRELEASED
 ---------------
 
+- Move GenericSetup step registration to zcml.
+  [wichert]
 
 0.4 (2008-10-06)
 ----------------
